@@ -58,12 +58,10 @@ public class DataServlet extends HttpServlet {
   public void doPost(HttpServletRequest request, HttpServletResponse response) throws IOException {
     doGet(request, response);
     String comment = request.getParameter("comment");
-    if(!comment.isEmpty() || !comment.isBlank()) {
+    if(comment != null && !comment.trim().isEmpty()) {   
         commentEntity.setProperty("comment", comment);
         DatastoreService datastore = DatastoreServiceFactory.getDatastoreService();
         datastore.put(commentEntity);
-    } else {
-        return;
     }
     response.sendRedirect("/index.html");
   }
